--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^11.16.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
