--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
 
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
 
     "react-router-dom": "^6.28.1",
     "socket.io-client": "^4.8.1"
