--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@chakra-ui/react": "^2.10.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "framer-motion": "^11.16.1",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.78.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-
-    "react-webcam": "^7.2.0",
-
     "react-router-dom": "^6.28.1",
+    "react-webcam": "^7.2.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
