--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "framer-motion": "^11.17.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.78.1",
-    "framer-motion": "^11.17.0",
     "react": "^18.3.1",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.1",
     "react-webcam": "^7.2.0",
